# dataframe-optimizer-97bd8a

./: CONTRIBUTING.md  README.md  pyproject.toml
src/dataframe_optimizer/: __init__.py  cli.py  core.py
tests/: test_core.py
