[tool.poetry]
name = "dataframe-optimizer"
version = "0.1.0"
description = "A library that optimizes pandas DataFrames for performance and memory usage."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{ include = "dataframe_optimizer" }]

[tool.poetry.dependencies]
pandas = "^1.5.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
click = "^8.0"